[package]
name = "heggemann_http"
version = "0.1.0"
edition = "2021"
publish = ["heggemann"]
license = "All Rights Reserved"
authors = ["Niclas Klugmann <klugmann@heggemann.com>"]
description = "A simple State machine HTTP library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
